# database-of-employees-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  note
res/db/: employees.db
src/: main.c
src/module/: employee.h  functions.c  functions.h  input.c  input.h  output.c  output.h  process.c  process.h
